References: https://mariadb.atlassian.net/browse/MDEV-5908 - moved releasing of wsrep THD mutex and thd->awake later, so that wsrep->abort_pre_commit() is guaranteed to run for a thread which is still in conflict state